# Discount-store

./: CMakeLists.txt  Dyskony - ReadMe.md  Makefile  README.md  ipc.c  ipc.h  kasa_samoobslugowa.c  kierownik.c  start_symulacji.sh
Include/: ipc.h
Src/: generator.c  ipc.c  kasa_samo.c  kasjer.c  kierownik.c  klient.c  pracownik.c
testy/test1/scenariusz1/: logi_generator.txt  logi_kasa_samo.txt  logi_kasjer.txt  logi_kierownik.txt  logi_klient.txt  logi_pracownik.txt  logi_sklep.txt
testy/test1/scenariusz2/: logi_generator.txt  logi_kasa_samo.txt  logi_kasjer.txt  logi_kierownik.txt  logi_klient.txt  logi_pracownik.txt
testy/test2/: logi_generator.txt  logi_kasa_samo.txt  logi_kasjer.txt  logi_kierownik.txt  logi_klient.txt  logi_pracownik.txt
testy/test3/: logi_generator.txt  logi_kasa_samo.txt  logi_kasjer.txt  logi_kierownik.txt  logi_pracownik.txt
testy/test4/: logi_generator.txt  logi_kasa_samo.txt  logi_kasjer.txt  logi_kierownik.txt  logi_klient.txt  logi_pracownik.txt
